arrays match themselves embedded as well SERVER-807